Complete application of registration UI

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
 *= require fullcalendar
 *= require token-input-bootstrappy
 *= require jquery-ui-1.10.4.custom
+*= require bootstrap-markdown.min
 *= require custom
 
 */
@@ -80,6 +81,7 @@ strong.uncheckit{text-decoration:none;}
 .padR30{padding-right: 30px;}
 .padR40{padding-right: 40px;}
 .padL10{padding-left: 20px;}
+.padT10{padding-top: 10px;}
 
 .clickable{
   cursor: pointer;
