--- a/app/views/application_statuses/_change_status.html.erb
+++ b/app/views/application_statuses/_change_status.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@programme,remote: true) do |app_sta| %>
-      <%= app_sta.collection_select(:app_status_id,ApplicationStatus.order(:name),:id,:name) %>
-      <%= app_sta.submit "Change", {class: "btnp",name: "change_status"} %>
+<%= form_for(@programme,remote: true,html: {class: "form-inline"}) do |app_sta| %>
+      <%= app_sta.collection_select(:app_status_id,ApplicationStatus.order(:name),:id,:name,{},{class: "form-control"}) %>
+      <%= app_sta.submit "Change", {class: "form-group btn-sm btn-primary",name: "change_status"} %>
 <% end %>
