--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -128,7 +128,7 @@ body {
     padding-top: 15px;
     border: 1px solid #d3d7cf;}
     .main .main-content .white-well {
-    background-color: #e2effc;
+    background-color: #fff;
     margin-left: 19px;
     margin-right: 25px;
     padding-top: 15px;
