--- a/app/views/registrations/_application.html.erb
+++ b/app/views/registrations/_application.html.erb
@@ -17,16 +17,19 @@
     <div class="panel-heading">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= i.id %>">
-         <%= i.institution.name %> 
+         <%= truncate(i.institution.name,length: 30) %> 
         </a>
         <small>
            <span id="tag_reg_status_<%= i.id %>" class='tag-like green'> <%= i.application_status.name %> </span>&nbsp;
            <span class='tag-like blue'> <%= i.institution.type.name %> </span>&nbsp;
            <span class='tag-like blue'> <%= i.institution.group.name rescue "No" %> Group </span>&nbsp;
            <small>
+           <span class="glyphicon glyphicon-share-alt mar0"></span>
            <a class="toggler" onclick="regAppStatus(this,'#status_select_<%= i.id %>');" href="#">
            Change Status</a> |
+           <span class="glyphicon glyphicon-remove mar0"></span>
            <%= link_to "Delete Programme",i, method: :delete, data: { confirm: 'Are you sure?' } %> |
+           <span class="glyphicon glyphicon-edit mar0"></span>
            <%= link_to "Update Fees","/create_fee/#{i.id}", remote: true %>
            <div class="row" id="status_select_<%= i.id %>" style="display:none;">
              <%= render 'application_statuses/change_status' %>
@@ -58,7 +61,8 @@
                       <h4 class="border-b">Application Details</h4>
                    <% s = ((Date.today >= i.start_date rescue 'start_date') ? ['start_date',99,'course started'] : ['start_date',98,'course yet to start']) %>
                    <% e = ((Date.today >= i.end_date rescue 'end_date') ? ['end_date',97,'course ended'] : ['end_date',98,'course in progress']) %>
-                        <% [[['ins_ref_no',99,'alloted by institution'],'reference_no'],
+                        <% [['institution_name','institution_name'],
+                            [['ins_ref_no',99,'alloted by institution'],'reference_no'],
                             ['course_level_name','course_level'],
                             ['course_subject_text','course_subject'],
                             [s,'start_date'],
