registration new form - done

--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -19,7 +19,7 @@
      <h5><b>Programmes Interested</b></h5>
    </div>
    <br/>   
-  <%= render 'preferred_programmes', :f => f %>
+  <%= render 'preferred_programmes', :f => f, obj: "enquiry" %>
   
   
   <div class="cl"></div>
